[gd_scene load_steps=43 format=2]

[ext_resource path="res://images/characters/zombies/zombie toast/ZombieToast.png" type="Texture" id=1]
[ext_resource path="res://src/calculators/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/calculators/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/animations/HurtAnimationPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-06.png" type="Texture" id=5]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-09.png" type="Texture" id=6]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-10.png" type="Texture" id=8]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-08.png" type="Texture" id=9]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-00.png" type="Texture" id=11]
[ext_resource path="res://src/characters/Zombie.gd" type="Script" id=13]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-04.png" type="Texture" id=14]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-05.png" type="Texture" id=15]
[ext_resource path="res://images/placeholders/circle of light.png" type="Texture" id=16]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-02.png" type="Texture" id=18]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-03.png" type="Texture" id=19]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-11.png" type="Texture" id=21]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-01.png" type="Texture" id=22]
[ext_resource path="res://images/characters/player/attack punch/adventurer-punch-07.png" type="Texture" id=24]
[ext_resource path="res://fonts/BebasNeue Bold.ttf" type="DynamicFontData" id=27]
[ext_resource path="res://images/characters/player/roll/adventurer-smrslt-00.png" type="Texture" id=28]
[ext_resource path="res://images/characters/player/roll/adventurer-smrslt-01.png" type="Texture" id=29]
[ext_resource path="res://images/characters/player/jump/adventurer-jump-00.png" type="Texture" id=30]
[ext_resource path="res://images/characters/player/roll/adventurer-smrslt-03.png" type="Texture" id=31]
[ext_resource path="res://images/characters/player/roll/adventurer-smrslt-02.png" type="Texture" id=32]
[ext_resource path="res://images/characters/player/attack air kick/adventurer-drop-kick-01.png" type="Texture" id=33]
[ext_resource path="res://images/characters/player/attack air kick/adventurer-drop-kick-02.png" type="Texture" id=34]
[ext_resource path="res://images/characters/player/attack air kick/adventurer-drop-kick-00.png" type="Texture" id=35]
[ext_resource path="res://images/characters/player/jump/adventurer-jump-02.png" type="Texture" id=36]
[ext_resource path="res://images/characters/player/jump/adventurer-jump-03.png" type="Texture" id=37]
[ext_resource path="res://images/characters/player/fall/adventurer-fall-00.png" type="Texture" id=38]
[ext_resource path="res://images/characters/player/attack air kick/adventurer-drop-kick-03.png" type="Texture" id=39]
[ext_resource path="res://images/characters/player/fall/adventurer-fall-01.png" type="Texture" id=40]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 37 ) ],
"loop": false,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 22 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 5 ), ExtResource( 24 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 21 ), ExtResource( 14 ), ExtResource( 11 ) ],
"loop": false,
"name": "attack_punch",
"speed": 8.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 32 ), ExtResource( 31 ) ],
"loop": false,
"name": "roll",
"speed": 12.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 39 ) ],
"loop": false,
"name": "attack_air_kick",
"speed": 15.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 40 ) ],
"loop": false,
"name": "fall",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 9.73019, 11.2556 )

[sub_resource type="Animation" id=9]

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 27 )

[node name="Zombie" type="KinematicBody2D" groups=[
"allies",
]]
collision_layer = 2
script = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -5.04199 )
scale = Vector2( -1.5, 1.5 )
frames = SubResource( 7 )
animation = "run"
frame = 2
playing = true

[node name="Hitboxes" type="Node2D" parent="AnimatedSprite"]

[node name="PunchHitbox" parent="AnimatedSprite/Hitboxes" instance=ExtResource( 3 )]
position = Vector2( 15.3164, 3.16891 )

[node name="Hurtboxes" type="Node2D" parent="AnimatedSprite"]

[node name="Hurtbox" parent="AnimatedSprite/Hurtboxes" instance=ExtResource( 2 )]
position = Vector2( 0, 3.52101 )
scale = Vector2( 0.472, 1.416 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.427189, 42.1152 )
scale = Vector2( 1.50668, 0.320001 )
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_punch = SubResource( 9 )

[node name="HurtAnimationPlayer" parent="AnimationPlayer" instance=ExtResource( 4 )]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.95, 0.95 )
limit_left = 0
limit_top = 27
limit_bottom = 540

[node name="StateLabel" type="Label" parent="."]
visible = false
margin_left = -100.927
margin_top = 52.8246
margin_right = 99.0726
margin_bottom = 72.8246
custom_fonts/font = SubResource( 10 )
text = "IDLE"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.301961 )
show_behind_parent = true
position = Vector2( 0, 45.7878 )
scale = Vector2( 0.2, 0.025 )
texture = ExtResource( 16 )

[node name="Tween" type="Tween" parent="."]

[node name="Timers" type="Node2D" parent="."]

[node name="HurtTimer" type="Timer" parent="Timers"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
